[package]
name = "threshold_bbsp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
round-based = { version = "0.2", features = ["dev", "derive"] }
curv-kzen = { version = "0.10", default-features = true }
ecdsa = "0.16.6"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
generic-array = { version = "0.14", features = ["serde"] }
thiserror = "1"
sha2 = "0.10.6"
bicycl = { path = "./bicycl"}
chrono = "0.4.33"
rayon = "1.9"
itertools = "0.12"
bls12_381 = "0.8.0"
ff = "=0.13.0"
rand_chacha = "0.3.1"
cgenprime = { path = './prime', default-features = false, version = '0.1.0' }
rust-gmp = "0.5.0"

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "n_out_f_n_sign"
path = "benches/n_out_f_n_sign.rs"
harness = false

[[bench]]
name = "n_out_f_n_keygen"
path = "benches/n_out_f_n_keygen.rs"
harness = false

[[bench]]
name = "t_out_of_n_sign"
path = "benches/t_out_of_n_sign.rs"
harness = false

[[bench]]
name = "t_out_of_n_keygen"
path = "benches/t_out_of_n_keygen.rs"
harness = false



