[package]
name = "bicycl"
version = "0.1.0"
edition = "2021"

[lib]
name = "bicycl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = "1.0"
serde = "1.0.202"
chrono = "0.4.33"
#tokio = { version = "1.15", features = ["full"] }
curv-kzen = { version = "0.10", default-features = true }
bls12_381 = "0.8.0"
ff = "=0.13.0"
rand_chacha = "0.3.1"


[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }
